# jupyterpost

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
jupyterpost/: __init__.py  client.py  jupyterpost.py
