[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "jupyterpost"
authors = [
  { name="Anton Akhmerov", email="jupyterpost@antonakhmerov.org" },
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# The minimal versions are somewhat arbitrary, but should be compatible
dependencies = [
    "jupyterhub >= 3.0.0",
    "httpx >= 0.19.0",
    "IPython >= 8.0.0",
]
[project.scripts]
jupyterpost = "jupyterpost:main"

[project.urls]
"Homepage" = "https://gitlab.kwant-project.org/qt/jupyterpost"
"Bug Tracker" = "https://gitlab.kwant-project.org/qt/jupyterpost/-/issues"

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
jupyterpost = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyterhub = ">=5.4.0,<6"
ipython = ">=9.6.0,<10"
